# zmk-module-xiaord

./: .gitignore  CMakeLists.txt  Kconfig  README.md  TOMORROW_NOTES.md
.claude/: settings.local.json
boards/shields/xiaord/: Kconfig.defconfig  Kconfig.shield  NICE_NANO_PINOUT.md  nice_nano_zmk.overlay  xiao_ble_zmk.overlay  xiaord.conf  xiaord.overlay  zmk_behaviors.dtsi
drivers/: CMakeLists.txt
drivers/display/: CMakeLists.txt  status_screen.c
drivers/input/: CMakeLists.txt  Kconfig  input_chsc6x_custom.c  virtual_key_source.c  virtual_key_source.h
dts/bindings/: vendor-prefixes.txt  xiaord,home-buttons.yaml
dts/bindings/behaviors/: zmk,behavior-xiaord-home-datetime.yaml  zmk,behavior-xiaord-home-info.yaml  zmk,behavior-xiaord-menu.yaml
dts/bindings/input/: chipsemi,chsc6x-custom.yaml
include/dt-bindings/xiaord/: input_codes.h
src/: CMakeLists.txt  Kconfig
src/behaviors/: CMakeLists.txt  behavior_xiaord_home_datetime.c  behavior_xiaord_home_info.c  behavior_xiaord_menu.c
src/display/: CMakeLists.txt  Kconfig  bt_status.c  bt_status.h  display_api.h  home_buttons.c  home_status.c  home_status.h  image-mesh-gradient.c  page_bt.c  page_clock.c  page_home.c  page_ops.h  status_screen.c  sym_lookup.h
src/display/bg/: bg2.c
src/display/listeners/: endpoint_status.c  endpoint_status.h
src/display/pages/: page_bt.c  page_home.c
src/display/ui/: CMakeLists.txt  home_buttons.c  home_buttons.h  ui_btn.c
src/display/ui/bg/: README.md  bg1.c  bg2.c  bg3.c
tools/: README.md  SD_BACKGROUND_STEPS.txt  convert_backgrounds.ps1  convert_family_backgrounds.ps1  convert_xiaord_bg.py  xiaord_sd_backgrounds.py
xiaord_example/: build.yaml
xiaord_example/boards/shields/sample_split/: Kconfig.defconfig  Kconfig.shield  sample_split.dtsi  sample_split.keymap  sample_split_dongle.conf  sample_split_dongle.overlay  sample_split_left.overlay  sample_split_right.overlay
zephyr/: module.yml
